[metadata]
name = images_to_pdf
version = 0.1.0
author = ulphidius
url = https://github.com/ulphidius/images_to_pdf.git
description = Console tool for convert image to pdf
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT

[options]
package = find:
install_requires =
    Click == 7.1.2
    Pillow >= 8.0

[options.entry_points]
console_scripts =
    images-to-pdf = images_to_pdf.main:main
