[metadata]
name = images_to_pdf
version = 0.2.2
author = ulphidius
url = https://github.com/ulphidius/images_to_pdf.git
description = Console tool for convert image to pdf
long_description = file: README.md
long_description_content_type = text/markdown
licence = MIT

[options]
package = find:
install_requires =
    Click == 8.0.0
    Pillow >= 8.0
    PyPDF2 == 1.26.0

[options.extras_require]
development = 
    pytest == 6.2.2
    pylint == 2.7.4
    pytest-cov == 2.11.1

[options.entry_points]
console_scripts =
    images-to-pdf = images_to_pdf.main:main
